--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jobportal",
+  "name": "Service.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,8 +10,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.1",
+    "jquery": "^3.6.0",
     "moment": "^2.24.0",
-    "mongoose": "^6.4.2",
+    "mongoose": "^6.4.3",
     "prop-types": "^15.7.2",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
@@ -20,6 +21,8 @@
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
+    "react-hook-form": "^7.33.1",
+    "react-notifications": "^1.7.3",
     "react-paginate": "^6.3.2",
     "react-quill": "^1.3.5",
     "react-router": "^5.1.2",
